# dbckit

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
dbckit/: __init__.py  _cycle_time.py  _frame_id.py  cli.py  io.py  serializer.py  validator.py  views.py
dbckit/codec/: __init__.py  _signal_type.py  decoder.py  encoder.py  frame.py
dbckit/model/: __init__.py  database.py  message.py  signal.py
dbckit/mutations/: __init__.py  _cycle_time.py  attribute.py  message.py  node.py  signal.py  signal_group.py
dbckit/operations/: __init__.py  codegen.py  diff.py  extract.py  j1939.py  log.py  merge.py
dbckit/parser/: __init__.py  dbc.lark  grammar.py  preprocessor.py  tokenizer.py
docs/: api-reference.md  cli.md  dbc-support.md  releasing.md
scripts/: create_sample_dbc.py
skills/dbckit/: SKILL.md
skills/dbckit/evals/: evals.json
skills/dbckit/references/: api-reference.md  cli.md  dbc-support.md  recipes.md
tests/: test_api.py  test_cli.py  test_codec.py  test_fidelity_gaps.py  test_golden_fixtures.py  test_io.py  test_log.py  test_mutations.py  test_operations.py  test_parser.py  test_serializer.py  test_validator.py
tests/fixtures/: complex.dbc  css_electronics_extended.dbc  extended.dbc  simple.dbc
tests/fixtures/golden/: README.md
